Replaced the text of the "Our Philosophy" section.
Changed styles for "Our philosophy" block of mobile and tablet versions.

--- a/index.html
+++ b/index.html
@@ -263,14 +263,15 @@
                                 alt=""
                                 class="philosophy__item-img"
                             />
-                            <div class="philosophy__item-text">
+                            <div class="philosophy__item-text-wrap">
                                 <h3 class="philosophy__item-title">
-                                    Следование традициям
+                                    Стремление к совершенству
                                 </h3>
                                 <p class="philosophy__item-p">
-                                    Последовав примеру отца, который занимался
-                                    ремонтом обуви, мы решили создать первый
-                                    кошелек.
+                                    Мы постоянно работаем над улучшением
+                                    качества наших изделий. Разрабатываем новый
+                                    дизайн, используем современные и качественные
+                                    материалы
                                 </p>
                             </div>
                         </div>
@@ -280,14 +281,16 @@
                                 alt=""
                                 class="philosophy__item-img"
                             />
-                            <div class="philosophy__item-text">
+                            <div class="philosophy__item-text-wrap">
                                 <h3 class="philosophy__item-title">
-                                    Внимание к деталям
+                                    Профессионализм
                                 </h3>
                                 <p class="philosophy__item-p">
-                                    Мы устремили свое внимание на простоту и
-                                    дизайн изделий, при этом не перегружаем их
-                                    излишней функциональностью
+                                    Отточенное годами мастерство ручной работы и
+                                    любовь к процессу от первого до последнего
+                                    стежка - всё это позволяет нам создавать
+                                    утонченные, элегантные и обладающие
+                                    характером аксессуары из кожи.
                                 </p>
                             </div>
                         </div>
@@ -297,14 +300,14 @@
                                 alt=""
                                 class="philosophy__item-img"
                             />
-                            <div class="philosophy__item-text">
+                            <div class="philosophy__item-text-wrap">
                                 <h3 class="philosophy__item-title">
-                                    Профессионализм
+                                    Ценовая политика
                                 </h3>
                                 <p class="philosophy__item-p">
-                                    Чтобы перенять весь опыт и мастерство
-                                    предков, потребовалось несколько лет
-                                    обучения и практики.
+                                    Мы убрали все накрутки за бренд,узнаваемость
+                                    и сделали цены на наши изделия более
+                                    приятными.
                                 </p>
                             </div>
                         </div>
