--- a/index.html
+++ b/index.html
@@ -485,5 +485,5 @@
     </body>
     <!-- Подключаем файл скриптов -->
     <script src="js/script.js"></script>
-    <script src="js/jquery-3.6.3.slim.min.js"></script>
+    <!-- <script src="js/jquery-3.6.3.slim.min.js"></script> -->
 </html>
