Added product category page (mobile, tablet, desktop).
Created a file "categories.html", set CSS styles (*** Content / Product_list ****)

Added a header for the block for mobile, tablet, desktop versions of each with its own image.
  @media (min-width: 576px) {
+ .h1__title {
+ margin-top: 278px;
+ 	}
+ .header-main-page {
+ background-image: url('../img/manufacturing_process_576x568.jpg');
+ 	}
+ .header-category-page {
+ background-image: url('../img/belt_category_576x568.jpg');
+ 	}
  }

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/style.css" />
-        <title>Document</title>
+        <title>Home</title>
     </head>
     <body>
-        <header class="header">
+        <header class="header header-main-page">
             <div class="container container-header">
                 <div class="logo header__logo">
-                    <a href="" class="logo__link">
+                    <a href="index.html" class="logo__link">
                         <img
                             src="img/logo_qualitas_leather.svg"
                             alt="Логотип qualitas leather"
@@ -26,7 +26,7 @@
                     <div class="close-button"></div>
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" class="nav__item-link">Главная</a>
+                            <a href="index.html" class="nav__item-link">Главная</a>
                             <span
                                 class="title-underline nav-title-underline"
                             ></span>
@@ -41,42 +41,42 @@
                             ></span>
                             <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >Ремни</a
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >Ремешки для часов</a
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >Картхолдеры</a
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >Обложки для паспорта</a
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >Чехлы для ручек</a
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >Зажимы для денег</a
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >Аксессуары</a
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >Другое</a
                                     >
                                 </li>
@@ -100,22 +100,22 @@
                             ></span>
                             <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >Способы доставки</a
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >Способы оплаты</a
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >О нас</a
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
+                                    <a href="catagory.html" class="sub-nav__item-link"
                                         >Часто задаваемые вопросы</a
                                     >
                                 </li>
@@ -131,8 +131,8 @@
                 </nav>
             </div>
             <div class="container">
-                <div class="h1 h1-main-page">
-                    <h1 class="h1__title h1-title-main-page">
+                <div class="h1 h1_yellow">
+                    <h1 class="h1__title ">
                         Мастерская кожаных изделий ручной работы
                     </h1>
                 </div>
@@ -148,7 +148,7 @@
                     </div>
                     <ul class="catalog__list">
                         <li class="catalog-item">
-                            <a href="" class="catalog-item__link">
+                            <a href="catagory.html" class="catalog-item__link">
                                 <img
                                     src="img/belts.jpg"
                                     alt="Ремни"
@@ -158,7 +158,7 @@
                             </a>
                         </li>
                         <li class="catalog-item">
-                            <a href="" class="catalog-item__link">
+                            <a href="catagory.html" class="catalog-item__link">
                                 <img
                                     src="img/watch_strap.jpg"
                                     alt="Ремешки для часов"
@@ -168,7 +168,7 @@
                             </a>
                         </li>
                         <li class="catalog-item">
-                            <a href="" class="catalog-item__link">
+                            <a href="catagory.html" class="catalog-item__link">
                                 <img
                                     src="img/cardholders.jpg"
                                     alt="Картхолдеры"
@@ -178,7 +178,7 @@
                             </a>
                         </li>
                         <li class="catalog-item">
-                            <a href="" class="catalog-item__link">
+                            <a href="catagory.html" class="catalog-item__link">
                                 <img
                                     src="img/wallets.jpg"
                                     alt="Кошельки"
@@ -188,7 +188,7 @@
                             </a>
                         </li>
                         <li class="catalog-item">
-                            <a href="" class="catalog-item__link">
+                            <a href="catagory.html" class="catalog-item__link">
                                 <img
                                     src="img/document_covers.jpg"
                                     alt="Чехлы для ручек"
@@ -200,7 +200,7 @@
                             </a>
                         </li>
                         <li class="catalog-item">
-                            <a href="" class="catalog-item__link">
+                            <a href="catagory.html" class="catalog-item__link">
                                 <img
                                     src="img/covers_for_pens.jpg"
                                     alt="Чехлы для ручек"
@@ -210,7 +210,7 @@
                             </a>
                         </li>
                         <li class="catalog-item">
-                            <a href="" class="catalog-item__link">
+                            <a href="catagory.html" class="catalog-item__link">
                                 <img
                                     src="img/money_clips.jpg"
                                     alt="Зажимы для денег"
@@ -220,7 +220,7 @@
                             </a>
                         </li>
                         <li class="catalog-item">
-                            <a href="" class="catalog-item__link">
+                            <a href="catagory.html" class="catalog-item__link">
                                 <img
                                     src="img/bags.jpg"
                                     alt="Сумки"
@@ -230,7 +230,7 @@
                             </a>
                         </li>
                         <li class="catalog-item">
-                            <a href="" class="catalog-item__link">
+                            <a href="catagory.html" class="catalog-item__link">
                                 <img
                                     src="img/accessories.jpg"
                                     alt="Аксессуары"
@@ -240,7 +240,7 @@
                             </a>
                         </li>
                         <li class="catalog-item">
-                            <a href="" class="catalog-item__link">
+                            <a href="catagory.html" class="catalog-item__link">
                                 <img
                                     src="img/other.jpg "
                                     alt="Другое"
