Fixed the correctness of the image path for products

--- a/catagory.html
+++ b/catagory.html
@@ -154,7 +154,7 @@
                                 <a href="" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
-                                            src="/img/product/belt (1).jpg"
+                                            src="img/product/belt (1).jpg"
                                             alt="Ремень из кожи буйвола коричневого цвета"
                                             class="product__img"
                                         />
@@ -169,7 +169,7 @@
                                 <a href="" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
-                                            src="/img/product/belt (2).jpg"
+                                            src="img/product/belt (2).jpg"
                                             alt="Ремень из кожи буйвола коричневого цвета"
                                             class="product__img"
                                         />
@@ -184,7 +184,7 @@
                                 <a href="" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
-                                            src="/img/product/belt (3).jpg"
+                                            src="img/product/belt (3).jpg"
                                             alt="Ремень из кожи буйвола коричневого цвета"
                                             class="product__img"
                                         />
@@ -199,7 +199,7 @@
                                 <a href="" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
-                                            src="/img/product/belt (4).jpg"
+                                            src="img/product/belt (4).jpg"
                                             alt="Ремень из кожи буйвола коричневого цвета"
                                             class="product__img"
                                         />
@@ -214,7 +214,7 @@
                                 <a href="" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
-                                            src="/img/product/belt (5).jpg"
+                                            src="img/product/belt (5).jpg"
                                             alt="Ремень из кожи буйвола коричневого цвета"
                                             class="product__img"
                                         />
@@ -229,7 +229,7 @@
                                 <a href="" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
-                                            src="/img/product/belt (6).jpg"
+                                            src="img/product/belt (6).jpg"
                                             alt="Ремень из кожи буйвола коричневого цвета"
                                             class="product__img"
                                         />
@@ -244,7 +244,7 @@
                                 <a href="" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
-                                            src="/img/product/belt (7).jpg"
+                                            src="img/product/belt (7).jpg"
                                             alt="Ремень из кожи буйвола коричневого цвета"
                                             class="product__img"
                                         />
@@ -259,7 +259,7 @@
                                 <a href="" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
-                                            src="/img/product/belt (8).jpg"
+                                            src="img/product/belt (8).jpg"
                                             alt="Ремень из кожи буйвола коричневого цвета"
                                             class="product__img"
                                         />
@@ -274,7 +274,7 @@
                                 <a href="" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
-                                            src="/img/product/belt (9).jpg"
+                                            src="img/product/belt (9).jpg"
                                             alt="Ремень из кожи буйвола коричневого цвета"
                                             class="product__img"
                                         />
