Added HTML and some CSS of product.html (final product page), mobile version.
Connected scripts and styles for the slider.
Changed the name of the modifier classes for <header> and <h1>.

--- a/catagory.html
+++ b/catagory.html
@@ -8,7 +8,7 @@
         <title>Category</title>
     </head>
     <body>
-        <header class="header header-category-page">
+        <header class="header header_big header_category-page">
             <div class="container container-header">
                 <div class="logo header__logo">
                     <a href="index.html" class="logo__link">
@@ -27,92 +27,60 @@
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a href="index.html" class="nav__item-link">Главная</a>
-                            <span
-                                class="title-underline nav-title-underline"
-                            ></span>
+                            <span class="title-underline nav-title-underline"></span>
                         </li>
                         <li class="nav__item">
                             <div class="nav-link__container">
                                 <a href="#" class="nav__item-link">Каталог</a>
                                 <div class="triangle"></div>
                             </div>
-                            <span
-                                class="title-underline nav-title-underline"
-                            ></span>
+                            <span class="title-underline nav-title-underline"></span>
                             <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
-                                        >Ремни</a
-                                    >
+                                    <a href="" class="sub-nav__item-link">Ремни</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
-                                        >Ремешки для часов</a
-                                    >
+                                    <a href="" class="sub-nav__item-link">Ремешки для часов</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
-                                        >Картхолдеры</a
-                                    >
+                                    <a href="" class="sub-nav__item-link">Картхолдеры</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
-                                        >Обложки для паспорта</a
-                                    >
+                                    <a href="" class="sub-nav__item-link">Обложки для паспорта</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
-                                        >Чехлы для ручек</a
-                                    >
+                                    <a href="" class="sub-nav__item-link">Чехлы для ручек</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
-                                        >Зажимы для денег</a
-                                    >
+                                    <a href="" class="sub-nav__item-link">Зажимы для денег</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
-                                        >Аксессуары</a
-                                    >
+                                    <a href="" class="sub-nav__item-link">Аксессуары</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
-                                        >Другое</a
-                                    >
+                                    <a href="" class="sub-nav__item-link">Другое</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__item-link">Блог</a>
-                            <span
-                                class="title-underline nav-title-underline"
-                            ></span>
+                            <span class="title-underline nav-title-underline"></span>
                         </li>
                         <li class="nav__item">
                             <div class="nav-link__container">
-                                <a href="#" class="nav__item-link"
-                                    >Информация</a
-                                >
+                                <a href="#" class="nav__item-link">Информация</a>
                                 <div class="triangle"></div>
                             </div>
-                            <span
-                                class="title-underline nav-title-underline"
-                            ></span>
+                            <span class="title-underline nav-title-underline"></span>
                             <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
-                                        >Способы доставки</a
-                                    >
+                                    <a href="" class="sub-nav__item-link">Способы доставки</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
-                                        >Способы оплаты</a
-                                    >
+                                    <a href="" class="sub-nav__item-link">Способы оплаты</a>
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="" class="sub-nav__item-link"
-                                        >О нас</a
-                                    >
+                                    <a href="" class="sub-nav__item-link">О нас</a>
                                 </li>
                                 <li class="sub-nav__item">
                                     <a href="" class="sub-nav__item-link"
@@ -123,18 +91,14 @@
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__item-link">Контакты</a>
-                            <span
-                                class="title-underline nav-title-underline"
-                            ></span>
+                            <span class="title-underline nav-title-underline"></span>
                         </li>
                     </ul>
                 </nav>
             </div>
             <div class="container">
                 <div class="h1">
-                    <h1 class="h1__title h1_category">
-                        Кожаные ремни ручной работы
-                    </h1>
+                    <h1 class="h1__title h1-title_category">Кожаные ремни ручной работы</h1>
                 </div>
             </div>
         </header>
@@ -143,15 +107,13 @@
             <div class="container">
                 <div class="category-items">
                     <div class="h2">
-                        <h2 class="h2__title">
-                            Каталог кожаных ремней ручной рыботы
-                        </h2>
+                        <h2 class="h2__title">Каталог кожаных ремней ручной рыботы</h2>
                         <span class="title-underline"></span>
                     </div>
                     <div class="products-wraper">
                         <ul class="products-list">
                             <li class="product">
-                                <a href="" class="pruduct__link">
+                                <a href="product.html" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
                                             src="img/product/belt (1).jpg"
@@ -166,7 +128,7 @@
                                 </a>
                             </li>
                             <li class="product">
-                                <a href="" class="pruduct__link">
+                                <a href="product.html" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
                                             src="img/product/belt (2).jpg"
@@ -175,13 +137,14 @@
                                         />
                                     </div>
                                     <p class="product__text product__title">
-                                        Ремень из кожи буйвола коричневого цвета ремень из кожи буйвола коричневого цвета
+                                        Ремень из кожи буйвола коричневого цвета ремень из кожи
+                                        буйвола коричневого цвета
                                     </p>
                                     <p class="product__text roduct__price">3 300 &#8381;</p>
                                 </a>
                             </li>
                             <li class="product">
-                                <a href="" class="pruduct__link">
+                                <a href="product.html" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
                                             src="img/product/belt (3).jpg"
@@ -196,7 +159,7 @@
                                 </a>
                             </li>
                             <li class="product">
-                                <a href="" class="pruduct__link">
+                                <a href="product.html" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
                                             src="img/product/belt (4).jpg"
@@ -205,13 +168,14 @@
                                         />
                                     </div>
                                     <p class="product__text product__title">
-                                        Ремень из кожи буйвола коричневого цвета ремень из кожи буйвола коричневого цвета
+                                        Ремень из кожи буйвола коричневого цвета ремень из кожи
+                                        буйвола коричневого цвета
                                     </p>
                                     <p class="product__text roduct__price">3 300 &#8381;</p>
                                 </a>
                             </li>
                             <li class="product">
-                                <a href="" class="pruduct__link">
+                                <a href="product.html" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
                                             src="img/product/belt (5).jpg"
@@ -226,7 +190,7 @@
                                 </a>
                             </li>
                             <li class="product">
-                                <a href="" class="pruduct__link">
+                                <a href="product.html" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
                                             src="img/product/belt (6).jpg"
@@ -241,7 +205,7 @@
                                 </a>
                             </li>
                             <li class="product">
-                                <a href="" class="pruduct__link">
+                                <a href="product.html" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
                                             src="img/product/belt (7).jpg"
@@ -256,7 +220,7 @@
                                 </a>
                             </li>
                             <li class="product">
-                                <a href="" class="pruduct__link">
+                                <a href="product.html" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
                                             src="img/product/belt (8).jpg"
@@ -271,7 +235,7 @@
                                 </a>
                             </li>
                             <li class="product">
-                                <a href="" class="pruduct__link">
+                                <a href="product.html" class="pruduct__link">
                                     <div class="product__img-wrap">
                                         <img
                                             src="img/product/belt (9).jpg"
@@ -306,35 +270,21 @@
                 <div class="contacts">
                     <ul class="contacts__list">
                         <li class="contacts__item">
-                            <a
-                                href="tel:+79896307755"
-                                class="contacts__item-link"
-                            >
-                                <img
-                                    src="img/call.svg"
-                                    alt="Звонок"
-                                    class="contacts__item-img"
-                                />
+                            <a href="tel:+79896307755" class="contacts__item-link">
+                                <img src="img/call.svg" alt="Звонок" class="contacts__item-img" />
                                 <p class="contacts__item-p">Звонок</p>
-                                <p class="contacts__item-p">
-                                    + 7 (977) 012-90-15
-                                </p>
+                                <p class="contacts__item-p">+ 7 (977) 012-90-15</p>
                             </a>
                         </li>
                         <li class="contacts__item">
-                            <a
-                                href="https://t.me/+79896307755"
-                                class="contacts__item-link"
-                            >
+                            <a href="https://t.me/+79896307755" class="contacts__item-link">
                                 <img
                                     src="img/telegram.svg"
                                     alt="Telegram"
                                     class="contacts__item-img"
                                 />
                                 <p class="contacts__item-p">Telegram</p>
-                                <p class="contacts__item-p">
-                                    + 7 (977) 012-90-15
-                                </p>
+                                <p class="contacts__item-p">+ 7 (977) 012-90-15</p>
                             </a>
                         </li>
                         <li class="contacts__item">
@@ -348,9 +298,7 @@
                                     class="contacts__item-img"
                                 />
                                 <p class="contacts__item-p">Instagram</p>
-                                <p class="contacts__item-p">
-                                    #qualitas_leather
-                                </p>
+                                <p class="contacts__item-p">#qualitas_leather</p>
                             </a>
                         </li>
                     </ul>
@@ -360,9 +308,7 @@
                     <p class="all-rights-reserved__p">
                         © 2020 QualitasLeather. All rights reserved.
                     </p>
-                    <p class="all-rights-reserved__p">
-                        Designed by Daniil Misyurin
-                    </p>
+                    <p class="all-rights-reserved__p">Designed by Daniil Misyurin</p>
                 </div>
             </div>
         </footer>
