--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Home</title>
     </head>
     <body>
-        <header class="header header-main-page">
+        <header class="header header_big header_home-page">
             <div class="container container-header">
                 <div class="logo header__logo">
                     <a href="index.html" class="logo__link">
@@ -27,23 +27,17 @@
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a href="index.html" class="nav__item-link">Главная</a>
-                            <span
-                                class="title-underline nav-title-underline"
-                            ></span>
+                            <span class="title-underline nav-title-underline"></span>
                         </li>
                         <li class="nav__item">
                             <div class="nav-link__container">
                                 <a href="#" class="nav__item-link">Каталог</a>
                                 <div class="triangle"></div>
                             </div>
-                            <span
-                                class="title-underline nav-title-underline"
-                            ></span>
+                            <span class="title-underline nav-title-underline"></span>
                             <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
-                                    <a href="catagory.html" class="sub-nav__item-link"
-                                        >Ремни</a
-                                    >
+                                    <a href="catagory.html" class="sub-nav__item-link">Ремни</a>
                                 </li>
                                 <li class="sub-nav__item">
                                     <a href="catagory.html" class="sub-nav__item-link"
@@ -76,28 +70,20 @@
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="catagory.html" class="sub-nav__item-link"
-                                        >Другое</a
-                                    >
+                                    <a href="catagory.html" class="sub-nav__item-link">Другое</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__item-link">Блог</a>
-                            <span
-                                class="title-underline nav-title-underline"
-                            ></span>
+                            <span class="title-underline nav-title-underline"></span>
                         </li>
                         <li class="nav__item">
                             <div class="nav-link__container">
-                                <a href="#" class="nav__item-link"
-                                    >Информация</a
-                                >
+                                <a href="#" class="nav__item-link">Информация</a>
                                 <div class="triangle"></div>
                             </div>
-                            <span
-                                class="title-underline nav-title-underline"
-                            ></span>
+                            <span class="title-underline nav-title-underline"></span>
                             <ul class="sub-nav__list sub-nav__list-none">
                                 <li class="sub-nav__item">
                                     <a href="catagory.html" class="sub-nav__item-link"
@@ -110,9 +96,7 @@
                                     >
                                 </li>
                                 <li class="sub-nav__item">
-                                    <a href="catagory.html" class="sub-nav__item-link"
-                                        >О нас</a
-                                    >
+                                    <a href="catagory.html" class="sub-nav__item-link">О нас</a>
                                 </li>
                                 <li class="sub-nav__item">
                                     <a href="catagory.html" class="sub-nav__item-link"
@@ -123,16 +107,14 @@
                         </li>
                         <li class="nav__item">
                             <a href="#" class="nav__item-link">Контакты</a>
-                            <span
-                                class="title-underline nav-title-underline"
-                            ></span>
+                            <span class="title-underline nav-title-underline"></span>
                         </li>
                     </ul>
                 </nav>
             </div>
             <div class="container">
                 <div class="h1 h1_yellow">
-                    <h1 class="h1__title ">
+                    <h1 class="h1__title h1-title_home">
                         Мастерская кожаных изделий ручной работы
                     </h1>
                 </div>
@@ -149,11 +131,7 @@
                     <ul class="catalog__list">
                         <li class="catalog-item">
                             <a href="catagory.html" class="catalog-item__link">
-                                <img
-                                    src="img/belts.jpg"
-                                    alt="Ремни"
-                                    class="catalog-item__img"
-                                />
+                                <img src="img/belts.jpg" alt="Ремни" class="catalog-item__img" />
                                 <p class="catalog-item__p">Ремни</p>
                             </a>
                         </li>
@@ -194,9 +172,7 @@
                                     alt="Чехлы для ручек"
                                     class="catalog-item__img"
                                 />
-                                <p class="catalog-item__p">
-                                    Обложки для паспорта
-                                </p>
+                                <p class="catalog-item__p">Обложки для паспорта</p>
                             </a>
                         </li>
                         <li class="catalog-item">
@@ -221,11 +197,7 @@
                         </li>
                         <li class="catalog-item">
                             <a href="catagory.html" class="catalog-item__link">
-                                <img
-                                    src="img/bags.jpg"
-                                    alt="Сумки"
-                                    class="catalog-item__img"
-                                />
+                                <img src="img/bags.jpg" alt="Сумки" class="catalog-item__img" />
                                 <p class="catalog-item__p">Сумки</p>
                             </a>
                         </li>
@@ -241,11 +213,7 @@
                         </li>
                         <li class="catalog-item">
                             <a href="catagory.html" class="catalog-item__link">
-                                <img
-                                    src="img/other.jpg "
-                                    alt="Другое"
-                                    class="catalog-item__img"
-                                />
+                                <img src="img/other.jpg " alt="Другое" class="catalog-item__img" />
                                 <p class="catalog-item__p">Другое</p>
                             </a>
                         </li>
@@ -258,20 +226,13 @@
                     </div>
                     <div class="philosophy__list">
                         <div class="philosophy__item">
-                            <img
-                                src="img/tradition.jpg"
-                                alt=""
-                                class="philosophy__item-img"
-                            />
+                            <img src="img/tradition.jpg" alt="" class="philosophy__item-img" />
                             <div class="philosophy__item-text-wrap">
-                                <h3 class="philosophy__item-title">
-                                    Стремление к совершенству
-                                </h3>
+                                <h3 class="philosophy__item-title">Стремление к совершенству</h3>
                                 <p class="philosophy__item-p">
-                                    Мы постоянно работаем над улучшением
-                                    качества наших изделий. Разрабатываем новый
-                                    дизайн, используем современные и качественные
-                                    материалы
+                                    Мы постоянно работаем над улучшением качества наших изделий.
+                                    Разрабатываем новый дизайн, используем современные и
+                                    качественные материалы
                                 </p>
                             </div>
                         </div>
@@ -282,15 +243,12 @@
                                 class="philosophy__item-img"
                             />
                             <div class="philosophy__item-text-wrap">
-                                <h3 class="philosophy__item-title">
-                                    Профессионализм
-                                </h3>
+                                <h3 class="philosophy__item-title">Профессионализм</h3>
                                 <p class="philosophy__item-p">
-                                    Отточенное годами мастерство ручной работы и
-                                    любовь к процессу от первого до последнего
-                                    стежка - всё это позволяет нам создавать
-                                    утонченные, элегантные и обладающие
-                                    характером аксессуары из кожи.
+                                    Отточенное годами мастерство ручной работы и любовь к процессу
+                                    от первого до последнего стежка - всё это позволяет нам
+                                    создавать утонченные, элегантные и обладающие характером
+                                    аксессуары из кожи.
                                 </p>
                             </div>
                         </div>
@@ -301,13 +259,10 @@
                                 class="philosophy__item-img"
                             />
                             <div class="philosophy__item-text-wrap">
-                                <h3 class="philosophy__item-title">
-                                    Ценовая политика
-                                </h3>
+                                <h3 class="philosophy__item-title">Ценовая политика</h3>
                                 <p class="philosophy__item-p">
-                                    Мы убрали все накрутки за бренд,узнаваемость
-                                    и сделали цены на наши изделия более
-                                    приятными.
+                                    Мы убрали все накрутки за бренд,узнаваемость и сделали цены на
+                                    наши изделия более приятными.
                                 </p>
                             </div>
                         </div>
@@ -325,9 +280,7 @@
                                 alt="Выбор кожи и фурнитуры"
                                 class="services__item-img"
                             />
-                            <p class="services__item-p">
-                                Выбор кожи и фурнитуры
-                            </p>
+                            <p class="services__item-p">Выбор кожи и фурнитуры</p>
                         </div>
                         <div class="services__item">
                             <img
@@ -368,9 +321,7 @@
                                 alt="Только натуральная кожа"
                                 class="advantages__item-img"
                             />
-                            <p class="advantages__item-p">
-                                Только натуральная кожа
-                            </p>
+                            <p class="advantages__item-p">Только натуральная кожа</p>
                         </li>
                         <!-- <li class="advantages__item">
                             <img
@@ -388,9 +339,7 @@
                                 alt="Большой опыт работы с кожей"
                                 class="advantages__item-img"
                             />
-                            <p class="advantages__item-p">
-                                Большой опыт работы с кожей
-                            </p>
+                            <p class="advantages__item-p">Большой опыт работы с кожей</p>
                         </li>
                         <li class="advantages__item">
                             <img
@@ -398,9 +347,7 @@
                                 alt="Доставка в любую точку"
                                 class="advantages__item-img"
                             />
-                            <p class="advantages__item-p">
-                                Доставка в любую точку
-                            </p>
+                            <p class="advantages__item-p">Доставка в любую точку</p>
                         </li>
                     </ul>
                 </div>
@@ -422,35 +369,21 @@
                 <div class="contacts">
                     <ul class="contacts__list">
                         <li class="contacts__item">
-                            <a
-                                href="tel:+79896307755"
-                                class="contacts__item-link"
-                            >
-                                <img
-                                    src="img/call.svg"
-                                    alt="Звонок"
-                                    class="contacts__item-img"
-                                />
+                            <a href="tel:+79896307755" class="contacts__item-link">
+                                <img src="img/call.svg" alt="Звонок" class="contacts__item-img" />
                                 <p class="contacts__item-p">Звонок</p>
-                                <p class="contacts__item-p">
-                                    + 7 (977) 012-90-15
-                                </p>
+                                <p class="contacts__item-p">+ 7 (977) 012-90-15</p>
                             </a>
                         </li>
                         <li class="contacts__item">
-                            <a
-                                href="https://t.me/+79896307755"
-                                class="contacts__item-link"
-                            >
+                            <a href="https://t.me/+79896307755" class="contacts__item-link">
                                 <img
                                     src="img/telegram.svg"
                                     alt="Telegram"
                                     class="contacts__item-img"
                                 />
                                 <p class="contacts__item-p">Telegram</p>
-                                <p class="contacts__item-p">
-                                    + 7 (977) 012-90-15
-                                </p>
+                                <p class="contacts__item-p">+ 7 (977) 012-90-15</p>
                             </a>
                         </li>
                         <li class="contacts__item">
@@ -464,9 +397,7 @@
                                     class="contacts__item-img"
                                 />
                                 <p class="contacts__item-p">Instagram</p>
-                                <p class="contacts__item-p">
-                                    #qualitas_leather
-                                </p>
+                                <p class="contacts__item-p">#qualitas_leather</p>
                             </a>
                         </li>
                     </ul>
@@ -476,9 +407,7 @@
                     <p class="all-rights-reserved__p">
                         © 2020 QualitasLeather. All rights reserved.
                     </p>
-                    <p class="all-rights-reserved__p">
-                        Designed by Daniil Misyurin
-                    </p>
+                    <p class="all-rights-reserved__p">Designed by Daniil Misyurin</p>
                 </div>
             </div>
         </footer>
